samples/_failures_safe/1761688053_7e244b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5f38239.c: In function ‘main’:
./samples/SAFE/__tmp_a5f38239.c:175:9: error: expected declaration or statement at end of input
  175 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a5f38239.c:175:9: error: expected declaration or statement at end of input
